_site/sql/hive/src/test/resources/ql/src/test/queries/positive/groupby5.q

SELECT src.key, sum(substr(src.value,5)) 
FROM src
GROUP BY src.key
