_site/sql/hive/src/test/resources/ql/src/test/queries/negative/duplicate_alias.q
FROM src a JOIN src a ON (a.key = a.key)
INSERT OVERWRITE TABLE dest1 SELECT a.key, a.value
